Add ScreenController to manage UI updates and player turns

--- a/index.html
+++ b/index.html
@@ -12,22 +12,13 @@
       <div class="container">
         <h1>Tic Tac Toe</h1>
 
-        <div class="next-player">Next player: <span>X</span></div>
+        <div class="player-turn"><span class="player-mark">X</span></div>
 
-        <div class="game-board">
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-          <div class="cell"></div>
-        </div>
+        <div class="game-board"></div>
         <button class="reset-game">Reset Game</button>
       </div>
     </main>
+
     <script src="./script.js"></script>
   </body>
 </html>
