--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <main>
       <div class="container">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="menu"
+        >
+          <line x1="4" x2="20" y1="12" y2="12" />
+          <line x1="4" x2="20" y1="6" y2="6" />
+          <line x1="4" x2="20" y1="18" y2="18" />
+        </svg>
         <h1>Tic Tac Toe</h1>
 
         <div class="player-turn"><span class="player-mark"></span></div>
@@ -76,15 +98,19 @@
           <div class="user-mark">
             <fieldset>
               <div>Play As</div>
-              <div class="user-mark-container">
+              <label class="user-mark-container player1">
+                X
                 <input type="radio" id="x" name="user-mark" checked />
-                <label for="x">X</label>
-              </div>
+                <!-- <label for="x">X</label> -->
+                <span class="check-mark"></span>
+              </label>
 
-              <div class="user-mark-container">
+              <label class="user-mark-container player2"
+                >O
                 <input type="radio" id="o" name="user-mark" />
-                <label for="o">O</label>
-              </div>
+                <!-- <label for="o">O</label> -->
+                <span class="check-mark"></span>
+              </label>
             </fieldset>
           </div>
 
